--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,35 +2,25 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Firefox",
-      "type": "firefox",
-      "request": "launch",
-      "url": "https://localhost:3000/",
-      "reAttach": true,
-      "pathMappings": [
-        {
-          "url": "webpack:///",
-          "path": "${workspaceFolder}/"
-        }
-      ]
-    },
-    {
-      "name": "Launch Chrome",
-      "type": "chrome",
+      "name": "Launch Edge",
+      "type": "pwa-msedge",
       "request": "launch",
       "url": "https://localhost:3000/",
       "webRoot": "${workspaceFolder}",
       "sourceMaps": true,
-      "trace": true
+      "trace": false,
+      "sourceMapPathOverrides": {
+        "webpack:///./*": "${webRoot}/*"
+      }
     },
     {
-      "name": "Attach to Chrome",
-      "type": "chrome",
+      "name": "Attach to Edge",
+      "type": "pwa-msedge",
       "request": "attach",
       "url": "https://localhost:3000/",
       "webRoot": "${workspaceFolder}",
       "sourceMaps": true,
-      "trace": true
+      "trace": false
     }
   ]
 }
