--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "clean": "rimraf ./dist ./out",
     "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "compile": "npm run clean && webpack --mode production",
-    "compile:dev": "npm run clean && webpack --mode development",
+    "compile:dev": "npm run clean && webpack --mode development --config webpack.dev.config.js",
     "package": "npm run compile && tfx extension create --manifest-globs azure-devops-extension.json src/**/azure-devops-extension.json --overrides-file configs/release.json --output-path out",
     "package:dev": "npm run compile:dev && tfx extension create --manifest-globs azure-devops-extension.json src/**/azure-devops-extension.json --overrides-file configs/dev.json --output-path out",
     "publish": "npm run compile && tfx extension publish --manifest-globs azure-devops-extension.json src/**/azure-devops-extension.json --overrides-file configs/release.json --output-path out",
     "publish:dev": "npm run compile:dev && tfx extension publish --manifest-globs azure-devops-extension.json src/**/azure-devops-extension.json --overrides-file configs/dev.json --output-path out",
-    "start:dev": "webpack-dev-server --mode development"
+    "start:dev": "webpack-dev-server --mode development --config webpack.dev.config.js"
   },
   "dependencies": {
     "@esdc-it-rp/azuredevops-common": "^1.0.1",
@@ -47,6 +47,7 @@
     "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.1"
+    "webpack-dev-server": "^4.7.1",
+    "webpack-merge": "^5.8.0"
   }
 }
