--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   },
   "dependencies": {
     "@esdc-it-rp/azuredevops-common": "^1.0.1",
-    "@fluentui/react": "^8.48.1",
     "azure-devops-extension-api": "^1.158.0",
     "azure-devops-extension-sdk": "^2.0.11",
-    "azure-devops-ui": "^1.160.4",
+    "azure-devops-ui": "^2.167.28",
     "dhtmlx-gantt": "^7.1.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "base64-inline-loader": "^2.0.1",
