--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "start:dev": "webpack-dev-server --mode development --config webpack.dev.config.js"
   },
   "dependencies": {
-    "@esdc-it-rp/azuredevops-common": "^1.0.5",
+    "@esdc-it-rp/azuredevops-common": "^1.0.7",
     "azure-devops-extension-api": "^1.158.0",
     "azure-devops-extension-sdk": "^2.0.11",
     "azure-devops-ui": "^2.167.28",
-    "dhtmlx-gantt": "^7.1.8"
+    "dhtmlx-gantt": "^7.1.8",
+    "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "base64-inline-loader": "^2.0.1",
