--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "start:dev": "webpack-dev-server --mode development --config webpack.dev.config.js"
   },
   "dependencies": {
-    "@esdc-it-rp/azuredevops-common": "^1.0.11",
+    "@esdc-it-rp/azuredevops-common": "^1.0.21",
+    "@fluentui/react": "^8.93.0",
     "azure-devops-extension-api": "^1.158.0",
     "azure-devops-extension-sdk": "^2.0.11",
-    "azure-devops-ui": "^2.167.28",
-    "dhtmlx-gantt": "^7.1.9",
+    "azure-devops-ui": "^2.167.44",
+    "dhtmlx-gantt": "^7.1.12",
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
